feat: add audio feedback feature with configuration options and UI toggle

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,14 @@
         </div>
         <small>Larger models are more accurate but slower. Model will download on first use.</small>
       </div>
+
+      <div class="config-item">
+        <label class="checkbox-label">
+          <input type="checkbox" id="audioFeedbackEnabled">
+          <span>Enable Audio Feedback</span>
+        </label>
+        <small>Play sounds when recording starts and stops</small>
+      </div>
     </div>
 
     <div class="transcriptions" id="transcriptions">
