feat: add auto-paste functionality for transcribed text and update related configurations

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,14 @@
         </label>
         <small>Play sounds when recording starts and stops</small>
       </div>
+
+      <div class="config-item">
+        <label class="checkbox-label">
+          <input type="checkbox" id="autoPasteEnabled">
+          <span>Auto-Paste Transcribed Text</span>
+        </label>
+        <small>Automatically paste text into active window. When disabled, text is copied to clipboard with a notification.</small>
+      </div>
     </div>
 
     <div class="transcriptions" id="transcriptions">
