--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,31 @@
         </div>
         <small>Maximum number of transcriptions to keep (1-1000). Older entries are automatically removed.</small>
       </div>
+
+      <div class="config-item">
+        <label for="whisperLanguage">Transcription Language:</label>
+        <div class="select-group">
+          <select id="whisperLanguage">
+            <option value="">Auto-detect</option>
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+            <option value="fr">French</option>
+            <option value="de">German</option>
+            <option value="it">Italian</option>
+            <option value="pt">Portuguese</option>
+            <option value="nl">Dutch</option>
+            <option value="pl">Polish</option>
+            <option value="ru">Russian</option>
+            <option value="zh">Chinese</option>
+            <option value="ja">Japanese</option>
+            <option value="ko">Korean</option>
+            <option value="ar">Arabic</option>
+            <option value="hi">Hindi</option>
+          </select>
+          <button id="saveLanguage">Save</button>
+        </div>
+        <small>Specify the language for better accuracy, or leave as auto-detect</small>
+      </div>
     </div>
 
     <div class="transcriptions" id="transcriptions">
