feat: update titles and tooltips for clarity in index and system tray

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speech-to-Text Monitor</title>
+  <title>Speech-to-Paste</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1>Speech-to-Text Monitor</h1>
+      <h1>Speech-to-Paste Settings & Transcriptions</h1>
       <div class="status">
         <span>Status:</span>
         <div class="status-indicator status-idle" id="statusIndicator"></div>
