feat: enhance configuration section with collapsible details and improved styling

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
       <button onclick="location.reload()">Refresh</button>
     </div>
 
-    <div class="config-section">
-      <h2>Configuration</h2>
+    <details class="config-section">
+      <summary><h2>Configuration</h2></summary>
       
       <div class="config-item">
         <label>Whisper Mode:</label>
@@ -219,7 +219,7 @@
         </ul>
         <small>Note: Use the application's console output to see the actual key code when you press a key.</small>
       </div>
-    </div>
+    </details>
 
     <div class="transcriptions" id="transcriptions">
       <div class="empty-state">No transcriptions yet</div>
